tests/ui/error-codes/E0433.stderr
error[E0433]: cannot find item `NonExistingMap` in this scope
  --> $DIR/E0433.rs:2:15
   |
LL |     let map = NonExistingMap::new();
   |               ^^^^^^^^^^^^^^ use of undeclared type `NonExistingMap`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
